--- a/frame.html
+++ b/frame.html
@@ -6,6 +6,7 @@
             body {
                 margin: 0;
             }
+            /* Effects */
             .outline {
                 filter: drop-shadow(1px 1px black) 
                     drop-shadow(-1px -1px black)
@@ -32,18 +33,12 @@
                     rgba(0, 0, 0, 0.5)) 
                     !important;
             }
-            .fill {
-                height: 100%;
-                width: 100%;
-                position: relative;
-                display: flex;
-            }
+            /* Images */
             .mon {
                 height: 100%;
                 width: auto;
                 position: relative;
                 z-index: 1;
-                object-fit: contain;
                 display: block;
             }
             .item {
@@ -70,10 +65,10 @@
             .grid {
                 display: flex;
                 flex-wrap: wrap;
+                align-content: center;
                 align-items: center;
                 justify-content: center;
                 gap: 5vw;
-                align-content: center;
             }
             .container {
                 display: flex;
@@ -94,19 +89,19 @@
             .icon {
                 height: 100%;
                 width: 100%;
+                position: relative;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: center;
-                position: relative;
             }
             .subtitle {
                 font-size: 3vw;
             }
         </style>
     </head>
-    <body class="fill">
-        <div id="content" class="fill">
+    <body>
+        <div id="content">
         </div>
         <template id="icon_template">
             <div class="container">
@@ -166,7 +161,6 @@
                     }
                 }
             }
-
             const effect = urlParams.get('effect')
             if(effect){
                 const elems = document.querySelectorAll('.mon, .item, .tera');
