broke usage stat calculator out into its own script

--- a/index.html
+++ b/index.html
@@ -765,6 +765,7 @@
     <script type="text/javascript" src="./js/utils.js"></script>
     <script type="text/javascript" src="./js/tom.js"></script>
     <script type="text/javascript" src="./js/pokepaste.js"></script>
+    <script type="text/javascript" src="./js/usage.js"></script>
     <script type="text/javascript" src="./js/players.js"></script>
     <script type="text/javascript" src="./js/vendor/obs-ws.min.js"></script>
     <script type="text/javascript" src="./js/obs.js"></script>
