--- a/index.html
+++ b/index.html
@@ -452,12 +452,21 @@
                             <span id="nonRestrictedUsage" class="font-small">Non-Restricted Mon Usage Statistics</span> → 
                             <input id="nonRestrictedUsageSource" class="sourceSelect sourceSetting" placeholder="Select OBS source..." autoComplete="on" list="browserSourceOptions_all"/>
                         </div>
-                        <iframe class="resize-both" id="nonRestrictedUsageFrame" scrolling="auto"></iframe>
+                        <iframe class="resize-both usageFrame" id="nonRestrictedUsageFrame" scrolling="auto"></iframe>
+                        <div class="slider">
+                            <button class="minus square" type='button'>➖</button>
+                            <input id="restrictedUsageSlider" class="generalSetting" type="range" step="1" min="1" max="32" value="4">
+                            <button class="plus square" type='button'>➕</button>
+                            <span class="font-small">
+                                <span>Top Restricted Mons displayed: </span>
+                                <span id="restrictedUsageCount">4</span>
+                            </span>
+                        </div>
                         <div>
                             <span id="restrictedUsage" class="font-small">Restricted Mon Usage Statistics</span> → 
                             <input id="restrictedUsageSource" class="sourceSelect sourceSetting" placeholder="Select OBS source..." autoComplete="on" list="browserSourceOptions_all"/>
                         </div>
-                        <iframe class="resize-both" id="restrictedUsageFrame" scrolling="auto"></iframe>
+                        <iframe class="resize-both usageFrame" id="restrictedUsageFrame" scrolling="auto"></iframe>
                     </div>
                 </div>
             </div>
